File the bound facts once, and ask nothing of the library below the binding
What a query over a family answers with is projected when the facts are filed
and handed back as it stands, where it was being copied twice per ask; a
silence is filed by its family and read by subject off that filing, with a
second under one subject refused. Whether the discharge check can carry a
declared form is what the binder held every form to, so the check no longer
reads the library to ask it again, and the one place below the binding that
read a signature is gone. A comparison's range reads the bound rows once, the
readings counter uses the entry it was handed, and the names the reviewer
found written out in full are imported.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>